--- a/views/denmark.ejs
+++ b/views/denmark.ejs
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/css/paris.css">
 </head>
 <body>
+  <%-include('navbar') %>
+
   <h1>Denmark Famous Places</h1>
   <ul>
     <% places.forEach(place => { %>
