--- a/views/destinations.ejs
+++ b/views/destinations.ejs
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+    <%-include('partials/navbar') %>
+
     <h1 class="welcome">Welcome to Destination World!</h1>
     <div class="container">
         
