--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,8 @@
   <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="/destinations">Destinations</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <%-include('partials/navbar') %>
+
   
   <main class="landing">
     <section id="home" class="hero">
@@ -27,7 +19,7 @@
     </section>
     
     <section id="services" class="services">
-      <h2>Our Services</h2>
+      <h2>Our Services12</h2>
       <div class="service-grid">
         <div class="service">
           <i class="fas fa-globe"></i>
